--- a/index.html
+++ b/index.html
@@ -232,12 +232,12 @@
 				<a href="#self" class="btnMenu" title="전체 메뉴 보기"><i class="fa-solid fa-bars-sort"></i></a>
 				<nav class="gnb">
 					<ul>
-						<li><a href="javascript:alert('Coming Soon')" title="NFT GAME">NFT GAME</a></li>
+						<li><a href="javascript:alert('Coming Soon')" title="NFT">NFT</a></li>
 						<li><a href="https://aniversenft.com" target="_blank" title="NFT MARKET">NFT MARKET</a></li>
 						<li><a href="javascript:alert('Coming Soon')" title="GOVERNANCE">GOVERNANCE</a></li>
 						<li><a href="https://swap.aniverse.io/" target="_blank" title="BRIDGE">BRIDGE</a></li>
 						<li><a href="https://www.youtube.com/c/LarvaTuba" target="_blank" title="MEDIA">MEDIA</a></li>
-						<li><a href="#supportModal" rel="modal:open" title="SUPPORT">SUPPORT</a></li>
+						<li><a href="#supportModal" rel="modal:open" title="INFO">INFO</a></li>
 						<li><a href="https://aniverse.gitbook.io/whitepaper/" target="_blank" title="WHITE PAPER">WHITE PAPER</a></li>
 					</ul>
 					<!--<a href="#self" title="CONNECT WALLET" class="connect_btn connect_btn_m">CONNECT WALLET</a>-->
